--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,3 +11,14 @@ services:
       - 3000:3000
     stdin_open: true
     command: npm start
+
+  postgres:
+    container_name: postgres
+    restart: always
+    image: postgres:latest
+    volumes:
+      - ./database:/var/lib/postgresql
+    ports:
+      - 5432:5432
+    environment:
+      POSTGRES_PASSWORD: 'postgres'
